fix(molecule/breadcrumb): breadcrumb item alignment and font size

--- a/components/molecule/breadcrumb/src/index.scss
+++ b/components/molecule/breadcrumb/src/index.scss
@@ -31,6 +31,9 @@
     flex-wrap: wrap;
 
     &Item {
+      display: flex;
+      font-size: $fz-breadcrumb-item;
+
       &:not(:last-child) {
         display: none;
       }
